mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v13__test__v13_to_v14_migration_wireguard_port_value.snap
---
source: mullvad-daemon/src/migrations/v13.rs
expression: "serde_json::to_string_pretty(&old_settings).unwrap()"
---
{
  "obfuscation_settings": {},
  "relay_settings": {
    "normal": {
      "wireguard_constraints": {
        "port": {
          "only": 53
        }
      }
    }
  }
}
